tests/NormalTests/paczka2/big_fuzzy/97603900.err
Error in line 1: A933 A718 10,2
Error in line 2: 0sXP2wfJrh A933 34,6
Error in line 7: 0sXP2wfJrh A523 77,3
Error in line 11: 0sXP2wfJrh S856 -5,9
Error in line 21: zvgL1SoKSSH A933 75,2
Error in line 26: zvgL1SoKSSH S856 72,9
Error in line 27: zvgL1SoKSSH A933 79,9
Error in line 32: rD4nx S856 52,5
Error in line 45: xcjXG A523 4,63
Error in line 36: PRD35Gz S856 42,9
Error in line 48: zvgL1SoKSSH S856 88,9
Error in line 62: zvgL1SoKSSH A718 141,4
Error in line 63: zvgL1SoKSSH A523 29,3
Error in line 73: PRD35Gz A933 58,5
Error in line 70: jq0T S856 21,6
Error in line 58: rD4nx A523 66,0
Error in line 79: rD4nx A933 79,7
Error in line 77: PRD35Gz S856 40,9
Error in line 97: jq0T A933 -35,6
Error in line 9: 0sXP2wfJrh S856 69,1
Error in line 83: PRD35Gz A718 3,9
Error in line 99: 0sXP2wfJrh A933 27,3
Error in line 109: rD4nx S856 64,2
Error in line 115: A933 S856 99,4
Error in line 96: jq0T A933 40,1
Error in line 144: 0sXP2wfJrh S856 27,2
Error in line 146: A9ââ A52â 75,0
Error in line 140: zvgL1SoKSSH S856 29,8
Error in line 160: xcjXG A523 107,8
Error in line 162: xcjXG A718 58,5
Error in line 148: zvgL1SoKSSH A933 77,7
Error in line 169: A933 S856 36,9
Error in line 170: rD4nx S856 2,9
Error in line 174: rD4nx A933 57,6
Error in line 176: rD4nx S856 16,9
Error in line 182: rD4nx A718 62,2
Error in line 185: xcjXG A718 38,6
Error in line 151: 0sXP2wfJrh A523 226,4
Error in line 188: xcjXG S856 65,7
Error in line 192: 0sXP2wfJrh A933 26,1
Error in line 193: PRD35Gz A738 47,9
Error in line 195: 0sXP2wfJrh A523 44,0
Error in line 196: PRD35Gz A718 129,8
Error in line 202: xcjXG S856 97,1
Error in line 198: 0sXP2wfJrh A933 94,1
Error in line 189: A933 A933 122,0
Error in line 214: PRD35Gz A933 36,6
Error in line 207: zvgL1SoKSSH S856 27,9
Error in line 227: rD4nx A718 16,8
Error in line 228: rD4nx A933 99,5
Error in line 229: rD4nx S856 13,8
Error in line 213: A933 A933 42,7
Error in line 220: zvgL1SoKSSH A718 74,3
Error in line 236: PRD35Gz S856 18,6
Error in line 238: jq0T A718 49,2
Error in line 234: zvgL1SoKSSH A933 77,3
Error in line 248: PRD35Gz A523 8,2
Error in line 246: zvgL1SoKSSH A718 66,7
